--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ eventlet==0.19.0
 Flask==0.11.1
 Flask-Cors==3.0.2
 Flask-PyMongo==0.4.1
+Flask-SocketIO==2.7.1
 greenlet==0.4.10
 itsdangerous==0.24
 Jinja2==2.8
