--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ python-engineio==1.0.3
 python-socketio==1.5.1
 six==1.10.0
 Werkzeug==0.11.11
+
+gcloud==0.18.1
+grpcio==1.0.0
+PyAudio==0.2.9
+grpc-google-cloud-speech-v1beta1==1.0.1
