--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,37 @@
 click==6.6
+enum34==1.1.6
 eventlet==0.19.0
 Flask==0.11.1
 Flask-Cors==3.0.2
 Flask-PyMongo==0.4.1
 Flask-SocketIO==2.7.1
+future==0.15.2
+futures==3.0.5
+gax-google-logging-v2==0.8.3
+gax-google-pubsub-v1==0.8.3
+gcloud==0.18.1
+google-api-python-client==1.5.3
+google-gax==0.13.0
+googleapis-common-protos==1.3.4
 greenlet==0.4.10
+grpc-google-cloud-speech-v1beta1==1.0.1
+grpc-google-logging-v2==0.9.0
+grpc-google-pubsub-v1==0.9.0
+grpcio==1.0.0
+httplib2==0.9.2
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+oauth2client==3.0.0
+ply==3.8
+protobuf==3.0.0
+pyasn1==0.1.9
+pyasn1-modules==0.0.8
 pymongo==3.3.0
 python-engineio==1.0.3
 python-socketio==1.5.1
+rsa==3.4.2
+simplejson==3.8.2
 six==1.10.0
+uritemplate==0.6
 Werkzeug==0.11.11
-
-gcloud==0.18.1
-grpcio==1.0.0
-grpc-google-cloud-speech-v1beta1==1.0.1
