--- a/requirements.txt
+++ b/requirements.txt
@@ -23,13 +23,16 @@ itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 oauth2client==3.0.0
+Pillow==3.3.1
 ply==3.8
 protobuf==3.0.0
 pyasn1==0.1.9
 pyasn1-modules==0.0.8
 pymongo==3.3.0
+pyPdf==1.13
 python-engineio==1.0.3
 python-socketio==1.5.1
+reportlab==3.3.0
 rsa==3.4.2
 simplejson==3.8.2
 six==1.10.0
